dossier-docs/src/adoc/user-guide/8.0/chapters/_06_pj_edition.adoc
[[_06_pj_edition]]
== Édition des pièces jointes et documents

En fonction de votre configuration, l’édition des pièces jointes et des documents peut fonctionner différemment.

=== Mode java Web Start

En utilisant java Web start, le fonctionnement attendu est décrit au chapitre <<Module d’édition de document,Module d’édition de document>>.

=== Mode sans client java

En mode [underline]#sans client *java*#, le module d’édition de document a le comportement suivant :

Lorsque vous éditez un document via le bouton image:06_pj_edition/image141.png[width=29,height=29]
ou image:06_pj_edition/image143.png[width=23,height=23] une fenêtre de téléchargement liée au navigateur apparait pour le
fichier correspondant :

.Ouverture d'une pièce jointe
image:06_pj_edition/image145.png[width=487,height=449]

Vous pouvez soit ouvrir le document, soit le télécharger pour l’ouvrir ensuite. Une fois que vous avez effectué les modifications souhaitées
sur le document et que vous l’avez enregistré, vous pouvez cliquer dans l’encadré intitulé *Télécharger le document original* pour sélectionner
le fichier édité sur votre poste :

.Sélection de la PJ mise à jour
image:06_pj_edition/image146.png[width=523,height=456]

Si le document que vous sélectionnez n’a pas le même nom que document initialement édité, vous devrez confirmer votre choix en appuyant sur *Valider* :

.Nom du document à envoyer différent de l’original
image:06_pj_edition/image147.png[width=401,height=192]

En cas d’erreur, vous pouvez appuyer sur *Annuler* dans la fenêtre de confirmation. Pour annuler complétement la modification du document,
vous pouvez appuyer sur *Annuler* dans l’encadré *Edition de la pièce jointe*.

Dans le cas des pièces jointes, lorsqu’elles ont été modifiées au moins une fois, il est possible d’afficher leurs différentes versions :

.Choix de version de la PJ
image:06_pj_edition/image148.png[500,500]

Hors version courante, vous pouvez supprimer la pièce jointe sélectionnée en cliquant sur image:icons/Ico_Suppr_unit1.png[].

=== Mode Applet (ancien fonctionnement)

Lors de l’édition d’une pièce jointe avant la version *6.2* d'{dossier}, il y avait plusieurs possibilités lors de l’édition d’un document via le bouton
image:06_pj_edition/image150.png[height=17] ou image:06_pj_edition/image151.png[height=17] :

. Si l’éditeur de texte, configuré sur le poste client (Microsoft Word ou Open Office), est déjà ouvert, le document à éditer s’y ouvre et un onglet
supplémentaire s’ouvre dans le navigateur internet.

.Modification de réponse
image:06_pj_edition/image152.png[width=565,height=107]


Cet onglet permet de valider les modifications et de choisir si le document doit être modifié avec Open Office ou Microsoft Word. Faites les modifications nécessaires sur le document dans votre logiciel de
traitement de texte, enregistrez et quittez. Revenez sur le nouvel onglet *Modification de la pièce jointe*. Cliquez sur *Valider les modifications* afin
d'appliquer les modifications ou *Annuler* si vous souhaitez annuler les changements.

[start=2]
. Si l’éditeur de texte n’est pas ouvert, le document à éditer s’y ouvre. Faites les modifications nécessaires sur le document dans votre logiciel de
traitement de texte, enregistrez et quittez. Dans ce cas, les modifications sont enregistrées automatiquement. Il n’y a pas besoin de valider les modifications.

<<<